Skip update operations during device sync if:
- a device has a manually-defined `name` that would be overwritten by
  the sync
    - can update other values such as disease/swabs
- if there are no changes between an existing and incoming device and
  its diseases/swabs